--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-sound": "^1.2.0",
     "reactotron-react-js": "^2.1.3",
     "reactotron-redux": "^2.1.3",
     "reactotron-redux-saga": "^4.2.2",
